<package>
  <name>mavros_swarm</name>
  <version>0.0.1</version>
  <description>Swarming Application for mavros</description>

  <maintainer email="jalim@ethz.ch">Jaeyoung Lim</maintainer>

  <author>Jaeyoung Lim</author>

  <license>BSD-3</license>

  <url type="website">https://github.com/Jaeyoung-Lim/mavros_swarm</url>
  <url type="bugtracker">https://github.com/Jaeyoung-Lim/mavros_swarm/issues</url>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed after this package is compiled. -->

  <export>
    <metapackage/>
  </export>
</package>
